# AnnoCoco

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  release.yml  test.yaml  test.yml
annococo/: coco.py
tests/: conftest.py  test_coco.py
