[tool.poetry]
name = "annococo"
version = "0.0.4"
description = ""
license = "MIT"
authors = ["yumizu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.12.0"
pydantic = "^2.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
ruff = "^0.2.1"
mypy = "^0.991"
pytest = "^7.2.0"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
pre-commit = ">=2.20,<4.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 119
indent-width = 4

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"

[tool.poetry.scripts]
annochan = "annochan.annochan:main"
